--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "symfony/framework-bundle": "~3.*",
         "symfony/console": "~2.3"
     },
     "autoload": {
@@ -21,7 +22,7 @@
     "target-dir": "Sithous/AntiSpamBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.1"
         }
     }
 }
