--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "~3.*",
+        "symfony/framework-bundle": ">=3.0.0",
         "symfony/console": "~2.3"
     },
     "autoload": {
