--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "target-dir": "Sithous/AntiSpamBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1"
+            "dev-master": "1.0-dev"
         }
     }
 }
