--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=3.0.0",
-        "symfony/console": "~2.3"
+        "symfony/framework-bundle": "~3.0",
+        "symfony/console": "~3.0"
     },
     "autoload": {
         "psr-0": { "Sithous\\AntiSpamBundle": "" }
