--- a/Resources/config/doctrine/SithousAntiSpam.orm.yml
+++ b/Resources/config/doctrine/SithousAntiSpam.orm.yml
@@ -25,7 +25,7 @@ Sithous\AntiSpamBundle\Entity\SithousAntiSpam:
     manyToOne:
         type:
             targetEntity: Sithous\AntiSpamBundle\Entity\SithousAntiSpamType
-            inversedBy: SithousAntiSpam
+            inversedBy: sithoutAntiSpam
             joinColumn:
                 name: type_id
                 referencedColumnName: id
