--- a/Resources/config/doctrine/SithousAntiSpamType.orm.yml
+++ b/Resources/config/doctrine/SithousAntiSpamType.orm.yml
@@ -20,4 +20,8 @@ Sithous\AntiSpamBundle\Entity\SithousAntiSpamType:
             type: integer
         maxCalls:
             type: integer
+    oneToMany:
+        sithoutAntiSpam:
+            targetEntity: Sithous\AntiSpamBundle\Entity\SithousAntiSpam
+            mappedBy: type
     lifecycleCallbacks: {  }
